--- a/index.css
+++ b/index.css
@@ -32,10 +32,10 @@ body {
 .icon-upload:before {
   content: "\e9c5";
 }
-.drag-up__wrap {
+.goodies-upload__wrap {
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, SimSun, sans-serif;
 }
-.drag-up__wrap .drag-up__container {
+.goodies-upload__wrap .goodies-upload__container {
   width: 360px;
   height: 180px;
   background-color: #fff;
@@ -49,14 +49,14 @@ body {
   position: relative;
   z-index: 9;
 }
-.drag-up__wrap .drag-up__container:hover {
+.goodies-upload__wrap .goodies-upload__container:hover {
   border-color: #409eff;
 }
-.drag-up__wrap .drag-up__container.is-dragover {
+.goodies-upload__wrap .goodies-upload__container.is-dragover {
   border: 2px dashed #409eff;
   background-color: rgba(64, 158, 255, 0.1);
 }
-.drag-up__wrap .drag-up__container .drag-up__input {
+.goodies-upload__wrap .goodies-upload__container .goodies-upload__input {
   opacity: 0;
   position: absolute;
   top: 0;
@@ -68,38 +68,38 @@ body {
   width: 100%;
   cursor: pointer;
 }
-.drag-up__wrap .drag-up__container .drag-up__dragger {
+.goodies-upload__wrap .goodies-upload__container .goodies-upload__dragger {
   display: flex;
   display: -webkit-flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.drag-up__wrap .drag-up__container .drag-up__dragger .icon-upload {
+.goodies-upload__wrap .goodies-upload__container .goodies-upload__dragger .icon-upload {
   font-size: 64px;
   margin-bottom: 15px;
   color: #c0c4cc;
 }
-.drag-up__wrap .drag-up__container .drag-up__dragger .text {
+.goodies-upload__wrap .goodies-upload__container .goodies-upload__dragger .text {
   color: #606266;
   font-size: 14px;
 }
-.drag-up__wrap .drag-up__container .drag-up__dragger .text em {
+.goodies-upload__wrap .goodies-upload__container .goodies-upload__dragger .text em {
   color: #409eff;
   font-style: normal;
 }
-.drag-up__wrap .drag-up__tip {
+.goodies-upload__wrap .goodies-upload__tip {
   width: 100%;
   font-size: 12px;
   color: #606266;
   margin-top: 7px;
 }
-.drag-up__wrap .drag-up-list {
+.goodies-upload__wrap .goodies-upload-list {
   list-style: none;
   padding: 0;
   margin: 10px 0 0 0;
 }
-.drag-up__wrap .drag-up-list .drag-up-list__item {
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item {
   width: 100%;
   display: flex;
   display: -webkit-flex;
@@ -110,17 +110,37 @@ body {
   padding: 0 4px;
   border-radius: 4px;
   cursor: pointer;
+  position: relative;
+  margin-bottom: 6px;
 }
-.drag-up__wrap .drag-up-list .drag-up-list__item:hover {
-  background-color: #f5f7fa;
-}
-.drag-up__wrap .drag-up-list .drag-up-list__item:hover .el-upload-list__item-status-label .icon-checked {
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item.has-progressbar .goodies-upload-list__item-status-label .icon-checked {
   display: none;
 }
-.drag-up__wrap .drag-up-list .drag-up-list__item:hover .el-upload-list__item-status-label .icon-close {
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item.has-progressbar .goodies-upload-list__item-status-label .icon-close {
+  display: none;
+}
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item.has-progressbar .goodies-upload-progress-bar {
+  visibility: visible;
+}
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item.has-progressbar:hover .goodies-upload-list__item-status-label .icon-checked {
+  display: none;
+}
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item.has-progressbar:hover .goodies-upload-list__item-status-label .icon-close {
   display: block;
 }
-.drag-up__wrap .drag-up-list .drag-up-list__item .drag-uplist__item-name {
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item.has-progressbar:hover .goodies-upload-progress-bar .goodies-upload--progress__text {
+  display: none;
+}
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item:hover {
+  background-color: #f5f7fa;
+}
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item:hover .goodies-upload-list__item-status-label .icon-checked {
+  display: none;
+}
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item:hover .goodies-upload-list__item-status-label .icon-close {
+  display: block;
+}
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item .goodies-uploadlist__item-name {
   position: relative;
   width: 335px;
   color: #606266;
@@ -131,13 +151,13 @@ body {
   box-sizing: border-box;
   padding: 0 20px;
 }
-.drag-up__wrap .drag-up-list .drag-up-list__item .drag-uplist__item-name .icon-document {
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item .goodies-uploadlist__item-name .icon-document {
   font-size: 14px;
   color: #909399;
   position: absolute;
   left: 0;
 }
-.drag-up__wrap .drag-up-list .drag-up-list__item .el-upload-list__item-status-label {
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item .goodies-upload-list__item-status-label {
   display: flex;
   display: -webkit-flex;
   height: 25px;
@@ -145,13 +165,45 @@ body {
   width: 17px;
   justify-content: center;
 }
-.drag-up__wrap .drag-up-list .drag-up-list__item .el-upload-list__item-status-label .icon-checked {
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item .goodies-upload-list__item-status-label .icon-checked {
   font-size: 14px;
   display: block;
   color: #67c23a;
 }
-.drag-up__wrap .drag-up-list .drag-up-list__item .el-upload-list__item-status-label .icon-close {
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item .goodies-upload-list__item-status-label .icon-close {
   font-size: 12px;
   display: none;
   color: #909399;
+}
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item .goodies-upload-progress-bar {
+  width: 100%;
+  position: absolute;
+  bottom: -3px;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  left: 0;
+  visibility: hidden;
+}
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item .goodies-upload-progress-bar .goodies-upload-progress-bar__outer {
+  display: flex;
+  display: -webkit-flex;
+  flex: 1;
+  height: 2px;
+  border-radius: 100px;
+  background-color: #ebeef5;
+}
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item .goodies-upload-progress-bar .goodies-upload-progress-bar__outer .goodies-upload-progress-bar__inner {
+  height: 2px;
+  border-radius: 100px;
+  background-color: #409eff;
+  transition: width 0.6s ease;
+}
+.goodies-upload__wrap .goodies-upload-list .goodies-upload-list__item .goodies-upload-progress-bar .goodies-upload--progress__text {
+  color: #606266;
+  font-size: 12px;
+  position: absolute;
+  right: 6px;
+  bottom: 9px;
 }
