--- a/index.less
+++ b/index.less
@@ -47,10 +47,10 @@ body {
     content: "\e9c5";
 }
 
-.drag-up__wrap {
+.goodies-upload__wrap {
     font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, SimSun, sans-serif;
 
-    .drag-up__container {
+    .goodies-upload__container {
         width: 360px;
         height: 180px;
         background-color: #fff;
@@ -72,7 +72,7 @@ body {
             background-color: rgba(64, 158, 255, 0.10);
         }
 
-        .drag-up__input {
+        .goodies-upload__input {
             opacity: 0;
             position: absolute;
             top: 0;
@@ -85,7 +85,7 @@ body {
             cursor: pointer;
         }
 
-        .drag-up__dragger {
+        .goodies-upload__dragger {
             .flex();
             flex-direction: column;
             align-items: center;
@@ -109,19 +109,19 @@ body {
         }
     }
 
-    .drag-up__tip {
+    .goodies-upload__tip {
         width: 100%;
         font-size: 12px;
         color: #606266;
         margin-top: 7px;
     }
 
-    .drag-up-list {
+    .goodies-upload-list {
         list-style: none;
         padding: 0;
         margin: 10px 0 0 0;
 
-        .drag-up-list__item {
+        .goodies-upload-list__item {
             width: 100%;
             .flex();
             justify-content: space-between;
@@ -131,11 +131,47 @@ body {
             padding: 0 4px;
             border-radius: 4px;
             cursor: pointer;
+            position: relative;
+            margin-bottom: 6px;
+            
+            &.has-progressbar {
+                .goodies-upload-list__item-status-label {
+                    .icon-checked {
+                        display: none;
+                    }
+
+                    .icon-close {
+                        display: none;
+                    }
+                }
+
+                .goodies-upload-progress-bar {
+                    visibility: visible;
+                }
+
+                &:hover {
+                    .goodies-upload-list__item-status-label {
+                        .icon-checked {
+                            display: none;
+                        }
+
+                        .icon-close {
+                            display: block;
+                        }
+                    }
+
+                    .goodies-upload-progress-bar {
+                        .goodies-upload--progress__text {
+                            display: none;
+                        }
+                    }
+                }
+            }
 
             &:hover {
                 background-color: #f5f7fa;
 
-                .el-upload-list__item-status-label {
+                .goodies-upload-list__item-status-label {
                     .icon-checked {
                         display: none;
                     }
@@ -146,7 +182,7 @@ body {
                 }
             }
 
-            .drag-uplist__item-name {
+            .goodies-uploadlist__item-name {
                 position: relative;
                 width: 335px;
                 color: #606266;
@@ -165,7 +201,7 @@ body {
                 }
             }
 
-            .el-upload-list__item-status-label {
+            .goodies-upload-list__item-status-label {
                 .flex();
                 height: 25px;
                 align-items: center;
@@ -182,6 +218,40 @@ body {
                     font-size: 12px;
                     display: none;
                     color: #909399;
+                }
+            }
+
+            .goodies-upload-progress-bar {
+                width: 100%;
+                position: absolute;
+                bottom: -3px;
+                .flex();
+                justify-content: space-between;
+                align-items: flex-end;
+                left: 0;
+                visibility: hidden;
+
+                .goodies-upload-progress-bar__outer {
+                    .flex();
+                    flex: 1;
+                    height: 2px;
+                    border-radius: 100px;
+                    background-color: #ebeef5;
+
+                    .goodies-upload-progress-bar__inner {
+                        height: 2px;
+                        border-radius: 100px;
+                        background-color: #409eff;
+                        transition: width .6s ease;
+                    }
+                }
+
+                .goodies-upload--progress__text {
+                    color: #606266;
+                    font-size: 12px;
+                    position: absolute;
+                    right: 6px;
+                    bottom: 9px;
                 }
             }
         }
